--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "hypestscore",
+  "name": "hypestboard",
   "version": "0.0.1",
-  "description": "A scoreboard for use with OBS/Xsplit",
+  "description": "A Boardboard for use with OBS/Xsplit",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/N0NamedGuy/HypestScore.git"
+    "url": "git+https://github.com/N0NamedGuy/HypestBoard.git"
   },
   "author": "David Serrano",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/N0NamedGuy/HypestScore/issues"
+    "url": "https://github.com/N0NamedGuy/HypestBoard/issues"
   },
-  "homepage": "https://github.com/N0NamedGuy/HypestScore#readme",
+  "homepage": "https://github.com/N0NamedGuy/HypestBoard#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "express": "^4.16.2",
+    "font-awesome": "^4.7.0",
+    "lodash": "^4.17.5",
+    "serve-static": "^1.13.2",
     "vue": "^2.5.13"
   }
 }
