--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "express": "^4.16.2",
+    "famfamfam-flags": "^1.0.0",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.5",
     "serve-static": "^1.13.2",
