--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "express": "^4.16.2",
-    "famfamfam-flags": "^1.0.0",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.5",
     "serve-static": "^1.13.2",
+    "svg-country-flags": "^1.2.1",
     "vue": "^2.5.13"
   }
 }
