--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.5",
+    "node-fetch": "^2.0.0",
     "serve-static": "^1.13.2",
     "svg-country-flags": "^1.2.1",
     "vue": "^2.5.13"
