--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "express": "^4.16.2",
+    "express-jsonschema": "^1.1.6",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.10",
     "node-fetch": "^2.0.0",
