Added overlays package

--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@hypestboard/server",
+  "name": "@hypestboard/overlays",
   "version": "0.0.1",
-  "description": "Server side for HypestBoard",
+  "description": "Overlays for use with HypestBoard",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,17 +18,8 @@
   },
   "homepage": "https://github.com/Hypest-team/HypestBoard#readme",
   "dependencies": {
-    "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
-    "express": "^4.16.2",
-    "express-jsonschema": "^1.1.6",
     "font-awesome": "^4.7.0",
-    "lodash": "^4.17.10",
-    "node-fetch": "^2.0.0",
-    "serve-static": "^1.13.2",
-    "svg-country-flags": "^1.2.1",
-    "vue": "^2.5.13",
-    "@hypestboard/client": "^0.0.1",
-    "@hypestboard/overlays": "^0.0.1"
+    "lodash": "^4.17.10"
   }
 }
