--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-vue": "^4.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
+    "flag-icon-css": "^3.0.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "lodash": "^4.17.10",
