--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bootstrap": "^4.1.1",
     "font-awesome": "^4.7.0",
+    "serve": "^7.2.0",
     "vue": "^2.5.2"
   },
   "devDependencies": {
