--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
   },
+  "main": "dist/index.html",
   "dependencies": {
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
