--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -2,17 +2,12 @@
   "name": "@scoreman/overlays",
   "version": "0.0.1",
   "description": "Overlays for use with Scoreman",
-  "private": true,
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/N0NamedGuy/scoreman.git"
   },
-  "author": "David Serrano",
+  "author": "David Serrano <david.ma.serrano@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/N0NamedGuy/scoreman/issues"
