--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,7 +2,6 @@
   "name": "@scoreman/server",
   "version": "0.0.1",
   "description": "Server side for Scoreman",
-  "private": true,
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/N0NamedGuy/scoreman.git"
   },
-  "author": "David Serrano",
+  "author": "David Serrano <david.ma.serrano@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/N0NamedGuy/scoreman/issues"
