--- a/.github/workflows/scoreman-ci.yml
+++ b/.github/workflows/scoreman-ci.yml
@@ -4,11 +4,12 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
         node-version: [12.x]
+        os: [ubuntu-latest, windows-latest]
 
     steps:
       - uses: actions/checkout@v2
@@ -32,7 +33,7 @@ jobs:
 
           # If the commit is tagged with a version (e.g. "v1.0.0"),
           # release the app after building
-          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+          # release: ${{ startsWith(github.ref, 'refs/tags/v') }}
 
           skip_build: true
           package_root: ./packages/standalone
