--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
+  "bin": {
+      "scoreman": "index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/N0NamedGuy/scoreman.git"
