--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,8 +21,8 @@
   },
   "homepage": "https://github.com/N0NamedGuy/scoreman#readme",
   "dependencies": {
-    "@scoreman/client": "^0.0.1",
-    "@scoreman/overlays": "^0.0.1",
+    "@scoreman/client": "0.0.3",
+    "@scoreman/overlays": "0.0.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-jsonschema": "^1.1.6",
