--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js"
   },
   "bin": {
-      "scoreman": "index.js"
+    "scoreman": "index.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,7 @@
     "express": "^4.16.3",
     "express-jsonschema": "^1.1.6",
     "node-fetch": "^2.1.2",
-    "serve-static": "^1.13.2"
+    "serve-index": "^1.9.1"
   },
   "devDependencies": {
     "lodash": "^4.17.10"
