--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@scoreman/client": "0.0.3",
     "@scoreman/overlays": "0.0.3",
+    "axios": "^0.19.2",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-jsonschema": "^1.1.6",
