--- a/packages/standalone/.gitignore
+++ b/packages/standalone/.gitignore
@@ -1,7 +1,25 @@
-node_modules
 .DS_Store
-Thumbs.db
-*.log
+node_modules
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
 /dist
 /temp
