--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
             "packages/overlays",
             "packages/standalone"
         ]
+    },
+    "devDependencies": {
+        "lerna": "^3.21.0"
     }
 }
