--- a/lerna.json
+++ b/lerna.json
@@ -5,10 +5,12 @@
     "version": "0.0.4",
     "npmClient": "yarn",
     "useWorkspaces": true,
-    "publish": {
-        "ignoreChanges": [
-            ".md"
-        ],
-        "message": "chore(release): publish"
+    "command": {
+        "publish": {
+            "ignoreChanges": [
+                ".md"
+            ],
+            "message": "chore(release): publish"
+        }
     }
 }
