ci(gh-workflow): make use of lerna to simplify deployment workflow
Now lerna is used to automate version bumping and deployment to NPM and Github releases

--- a/lerna.json
+++ b/lerna.json
@@ -9,7 +9,9 @@
         "publish": {
             "ignoreChanges": [
                 ".md"
-            ],
+            ]
+        },
+        "version": {
             "message": "chore(release): publish"
         }
     }
