--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
     name: Build and bump version
 
     env:
-      NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
     steps:
       - uses: actions/checkout@v2
@@ -37,6 +37,9 @@ jobs:
         run: npx lerna version --conventional-commits --create-release github --yes
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set npm token
+        run: npm config set //registry.npmjs.org/:_authToken=${NPM_TOKEN}
 
       - name: Publish on npm
         run: npx lerna publish from-package --yes
