ci(gh-workflow): :bug: add github token to electron release action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,6 +97,7 @@ jobs:
           skip_build: true
           package_root: ./packages/standalone
           args: -p onTagOrDraft
+          github_token: ${{ secrets.GITHUB_TOKEN }}
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -140,5 +141,6 @@ jobs:
           skip_build: true
           package_root: ./packages/standalone
           args: -p onTagOrDraft
+          github_token: ${{ secrets.GITHUB_TOKEN }}
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
