--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -28,7 +28,8 @@
     "express": "^4.16.3",
     "express-jsonschema": "^1.1.6",
     "node-fetch": "^2.1.2",
-    "serve-index": "^1.9.1"
+    "serve-index": "^1.9.1",
+    "yargs": "^16.2.0"
   },
   "devDependencies": {
     "lodash": "^4.17.10"
